telas dos modulos de livro e regiao

--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -60,11 +60,10 @@
 								<!--<![endif]--> <!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub">
 									<ul class="sub">
-										<li><a href="#nogo">Gerenciar Assunto</a></li>
-										<li><a href="#nogo">Gerenciar Autor</a></li>
+										<li><a href="/biblioteca-jsf/livro/assunto/index.jsf">Gerenciar Assunto</a></li>
+										<li><a href="/biblioteca-jsf/livro/autor/index.jsf">Gerenciar Autor</a></li>
 										<li><a href="#nogo">Gerenciar Livro</a></li>
-										<li><a href="#nogo">Gerenciar Editora</a></li>
-										<li><a href="#nogo">Gerenciar Categoria</a></li>
+										<li><a href="/biblioteca-jsf/livro/editora/index.jsf">Gerenciar Editora</a></li>
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
 						</ul>
@@ -77,9 +76,8 @@
 								<!--<![endif]--> <!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub show">
 									<ul class="sub">
-										<li><a href="#nogo">Gerenciar Pessoa</a></li>
 										<!-- <li class="sub_show"><a href="#nogo">Add product</a></li> -->
-										<li><a href="#nogo">Gerenciar Usuario</a></li>
+										<li><a href="#nogo">Gerenciar Funcionario</a></li>
 										<li><a href="#nogo">Gerenciar Locador</a></li>										
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
@@ -104,9 +102,9 @@
 								<!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub">
 									<ul class="sub">
-										<li><a href="#nogo">Gerenciar Cidade</a></li>
-										<li><a href="#nogo">Gerenciar Estado</a></li>
-										<li><a href="#nogo">Gerenciar Pais</a></li>
+										<li><a href="/biblioteca-jsf/endereco/cidade/index.xhtml">Gerenciar Cidade</a></li>
+										<li><a href="/biblioteca-jsf/endereco/estado/index.xhtml">Gerenciar Estado</a></li>
+										<li><a href="/biblioteca-jsf/endereco/pais/index.xhtml">Gerenciar Pais</a></li>
 
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
