--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -40,9 +40,9 @@
 							<div class="clear"></div>
 							<div class="acc-line"></div>
 							<h:link id="acc-inbox">Inbox</h:link>
-							<div class="clear"></div>							
+							<div class="clear"></div>
 							<div class="acc-line"></div>
-							<h:link id="acc-stats">Statistics</h:link>							
+							<h:link id="acc-stats">Statistics</h:link>
 						</div>
 					</div>
 					<!--  end account-content -->
@@ -56,14 +56,17 @@
 					<div class="table">
 
 						<ul class="select">
-							<li><a href="#nogo"><b>Livro</b> <!--[if IE 7]><!--></a>
-								<!--<![endif]--> <!--[if lte IE 6]><table><tr><td><![endif]-->
+							<li><a href="#nogo"><b>Livro</b> <!--[if IE 7]><!--></a> <!--<![endif]-->
+								<!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub">
 									<ul class="sub">
-										<li><a href="/biblioteca-jsf/livro/assunto/index.jsf">Gerenciar Assunto</a></li>
-										<li><a href="/biblioteca-jsf/livro/autor/index.jsf">Gerenciar Autor</a></li>
+										<li><a href="/biblioteca-jsf/livro/assunto/index.jsf">Gerenciar
+												Assunto</a></li>
+										<li><a href="/biblioteca-jsf/livro/autor/index.jsf">Gerenciar
+												Autor</a></li>
 										<li><a href="#nogo">Gerenciar Livro</a></li>
-										<li><a href="/biblioteca-jsf/livro/editora/index.jsf">Gerenciar Editora</a></li>
+										<li><a href="/biblioteca-jsf/livro/editora/index.jsf">Gerenciar
+												Editora</a></li>
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
 						</ul>
@@ -72,13 +75,16 @@
 
 						<!-- <ul class="current">-->
 						<ul class="select">
-							<li><a href="#nogo"><b>Pessoas</b> <!--[if IE 7]><!--></a>
-								<!--<![endif]--> <!--[if lte IE 6]><table><tr><td><![endif]-->
+							<li><a href="#nogo"><b>Pessoas</b> <!--[if IE 7]><!--></a> <!--<![endif]-->
+								<!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub show">
 									<ul class="sub">
 										<!-- <li class="sub_show"><a href="#nogo">Add product</a></li> -->
-										<li><a href="#nogo">Gerenciar Funcionario</a></li>
-										<li><a href="#nogo">Gerenciar Locador</a></li>										
+										<li><a
+											href="/biblioteca-jsf/pessoa/funcionario/index.jsf">Gerenciar
+												Funcionario</a></li>
+										<li><a href="/biblioteca-jsf/pessoa/locador/index.jsf">Gerenciar
+												Locador</a></li>
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
 						</ul>
@@ -90,7 +96,7 @@
 								<!--<![endif]--> <!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub">
 									<ul class="sub">
-										<li><a href="#nogo">Gerenciar Emprestimos</a></li>										
+										<li><a href="#nogo">Gerenciar Emprestimos</a></li>
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
 						</ul>
@@ -102,9 +108,12 @@
 								<!--[if lte IE 6]><table><tr><td><![endif]-->
 								<div class="select_sub">
 									<ul class="sub">
-										<li><a href="/biblioteca-jsf/endereco/cidade/index.xhtml">Gerenciar Cidade</a></li>
-										<li><a href="/biblioteca-jsf/endereco/estado/index.xhtml">Gerenciar Estado</a></li>
-										<li><a href="/biblioteca-jsf/endereco/pais/index.xhtml">Gerenciar Pais</a></li>
+										<li><a href="/biblioteca-jsf/endereco/cidade/index.xhtml">Gerenciar
+												Cidade</a></li>
+										<li><a href="/biblioteca-jsf/endereco/estado/index.xhtml">Gerenciar
+												Estado</a></li>
+										<li><a href="/biblioteca-jsf/endereco/pais/index.xhtml">Gerenciar
+												Pais</a></li>
 
 									</ul>
 								</div> <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
