=parte da tela de emprestimo

--- a/WebContent/template/menu.xhtml
+++ b/WebContent/template/menu.xhtml
@@ -64,7 +64,8 @@
 												Assunto</a></li>
 										<li><a href="/biblioteca-jsf/livro/autor/index.jsf">Gerenciar
 												Autor</a></li>
-										<li><a href="#nogo">Gerenciar Livro</a></li>
+										<li><a href="/biblioteca-jsf/livro/livro/index.jsf">Gerenciar
+												Livro</a></li>
 										<li><a href="/biblioteca-jsf/livro/editora/index.jsf">Gerenciar
 												Editora</a></li>
 									</ul>
