terminado tela de login e melhoria nas listagens das telas feitas

--- a/WebContent/template/masterTemplate.xhtml
+++ b/WebContent/template/masterTemplate.xhtml
@@ -5,6 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
+<f:event listener="#{loginBean.checkLogin}" type="preRenderView" />
 <h:head>
 	<link
 		href="#{facesContext.externalContext.requestContextPath}/resources/css/screen.css"
